# kalshi-arb

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: collect_databento.py  collect_kalshi.py  run_collector.py
src/: cli.py
src/backtest/: __init__.py  backtest_engine.py  config.py  event_engine.py  fill_model.py  metrics.py  optimizer.py  report.py
src/data_feed/: __init__.py  databento_client.py  kalshi_client.py  recorder.py  schemas.py
src/execution/: __init__.py  config.py  execution_engine.py  fill_simulator.py  hedge_simulator.py  liquidity.py  order_manager.py  smart_orders.py
src/monitoring/: __init__.py  alerts.py  config.py  dashboard.py  metrics_collector.py  web_server.py
src/pricing/: __init__.py  basis_calculator.py  binary_pricer.py  vol_surface.py
src/risk/: __init__.py  config.py  ofi.py  position_limits.py  risk_manager.py  sweep_detector.py  toxicity_monitor.py  vpin.py
tests/: conftest.py
tests/integration/: test_backtest_flow.py  test_execution_flow.py  test_risk_flow.py
tests/unit/: test_execution.py  test_fill_model.py  test_liquidity.py  test_metrics.py  test_ofi.py  test_toxicity.py  test_vpin.py
